finished adding details

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         />
         <div>
           <h1>Stefan Syrett</h1>
-          <p class="truth-lie">Nerd</p>
+          <p class="truth-lie">I love code.</p>
           <div class="social-links">
             <div class="link">
               <a
@@ -74,10 +74,10 @@
 
       <section>
         <h2>My question to you</h2>
-        <p>What's your favorite book?</p>
-        <form class="question-form">
-          <input type="text" />
-          <button type="submit">📧</button>
+        <p>What's your favorite book? (or manga)</p>
+        <form class="question-form" onsubmit="return false">
+          <input id="bookRes" type="text" />
+          <button id="form-submit">📧</button>
         </form>
       </section>
 
