--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Futureproof!</title>
+    <meta name="description" content="A HTML and CSS site I made for a technical assessment with Futureproof Bootcamp!">
     <link rel="icon" href="./public/bitmoji-computer.svg" />
     <link rel="stylesheet" href="./src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
